[tool.poetry]
name = "unionllm"
version = "0.1.26"
description = "A Python library for unified access to all kinds of large language models."
license = "MIT"
homepage = "https://github.com/EvalsOne/UnionLLM"
authors = ["evalsone <contact@evalsone.com>"]

[tool.poetry.dependencies]
python = "*"
dashscope = "*"
openai = "*"
pydantic = "*"
requests = "*"
tenacity = "*"
websocket-client = "*"
zhipuai = "*"
litellm = "*"
